<resources>
    <string name="app_name">WeatherForecast</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="alerts">Alerts</string>
    <string name="favorite">Favorite</string>
    <string name="degree_in_fahrenheit" translatable="false"> %d \u2109</string>
    <string name="degree_in_celsius" translatable="false"> %d \u2103</string>
    <string name="visibility">Visibility</string>
    <string name="next_week">Next Week</string>
    <string name="today">Today</string>
    <string name="celsius">Celsius</string>
    <string name="keliven">Keliven</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="temperature">Temperature</string>
    <string name="mile_hr">Mile/hr</string>
    <string name="meter_sec">Meter/Sec</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="gps">GPS</string>
    <string name="map">Map</string>
    <string name="location">Location</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="google_maps_key" translatable="false">AIzaSyDaVJYFL9TuzFfODiVOlcGbFA2r_uW0CfU</string>
    <string name="mile_format" translatable="false">%s\nmile/hr</string>
    <string name="pick_location">pick location</string>
    <string name="add_location_btn">Add Location</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="add">Add</string>
    <string name="weather_condition">Weather condition</string>
    <string name="dismiss">dismiss</string>
    <string name="notification">Notification</string>
    <string name="alarm">Alarm</string>
    <string name="pick_weather_alert_time">pick weather alert time</string>
    <string name="no_alerts">No alerts</string>
    <string name="no_favorite_places">No Favorite Places</string>
    <!--    @{@string/quote_format(gameViewModel.word)-->
</resources>