<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_outline_home_24"
            android:iconTint="@color/dark_secondary"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_favorite_fragment"
            android:icon="@drawable/ic_baseline_favorite_border_24"
            android:title="@string/favorite" />
        <item
            android:id="@+id/nav_weather_alerts_fragment"
            android:icon="@drawable/ic_outline_add_alert_24"
            android:title="@string/alerts" />
        <item
            android:id="@+id/nav_settings_fragment"
            android:icon="@drawable/ic_outline_settings_24"
            android:title="@string/action_settings" />
    </group>
</menu>